--- a/chambres.html
+++ b/chambres.html
@@ -14,6 +14,7 @@
     <!--Naviguation -->
     <header class="mainhead">
       <div class="container">
+        <!--Naviguation -->
         <nav class="menu">
           <a href="index.html">
             <img
@@ -22,12 +23,17 @@
               class="logo-header"
             />
           </a>
-          <ul>
+          <div class="menu-burger">
+            <span class="nav-icon"></span>
+            <span class="nav-icon"></span>
+            <span class="nav-icon"></span>
+          </div>
+          <ul class="catégories">
             <li><a href="chambres.html">Chambres et Suites</a></li>
             <li><a href="restaurant.html">Restaurant</a></li>
             <li><a href="spa.html">Spa</a></li>
+            <a href="contact.html" class="btn">Contact</a>
           </ul>
-          <a href="contact.html" class="btn">Contact</a>
         </nav>
         <!--Fin nav-->
       </div>
